version/stable/_sources/api/ansys/mechanical/stubs/v241/Ansys/Mechanical/DataModel/Enums/MappingControlType.rst.txt
.. vale off



:class:`MappingControlType`
===========================

.. py:class:: ansys.mechanical.stubs.v241.Ansys.Mechanical.DataModel.Enums.MappingControlType

   Bases: :py:obj:`enum.Enum`


   
   Generic enumeration.

   Derive from this class to define new enumerations.















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: MappingControlType

Overview
--------

.. tab-set::





   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Manual`
            - 
          * - :py:attr:`~ProgramControlled`
            - 
          * - :py:attr:`~Undefined`
            - 








Attribute detail
----------------
.. py:attribute:: Manual
   :value: 2


.. py:attribute:: ProgramControlled
   :value: 1


.. py:attribute:: Undefined
   :value: 0






.. vale on