version/stable/_sources/api/ansys/mechanical/stubs/v251/Ansys/Mechanical/DataModel/Enums/MappingControlType.rst.txt
.. vale off



:class:`MappingControlType`
===========================

.. py:class:: ansys.mechanical.stubs.v251.Ansys.Mechanical.DataModel.Enums.MappingControlType(*args, **kwds)

   Bases: :py:obj:`enum.Enum`


   
   Create a collection of name/value pairs.

   Example enumeration:

   >>> class Color(Enum):
   ...     RED = 1
   ...     BLUE = 2
   ...     GREEN = 3

   Access them by:

   - attribute access:

     >>> Color.RED
     <Color.RED: 1>

   - value lookup:

     >>> Color(1)
     <Color.RED: 1>

   - name lookup:

     >>> Color['RED']
     <Color.RED: 1>

   Enumerations can be iterated over, and know how many members they have:

   >>> len(Color)
   3

   >>> list(Color)
   [<Color.RED: 1>, <Color.BLUE: 2>, <Color.GREEN: 3>]

   Methods can be added to enumerations, and members can have their own
   attributes -- see the documentation for details.















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: MappingControlType

Overview
--------

.. tab-set::





   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Manual`
            - 
          * - :py:attr:`~ProgramControlled`
            - 
          * - :py:attr:`~Undefined`
            - 








Attribute detail
----------------
.. py:attribute:: Manual
   :value: 2


.. py:attribute:: ProgramControlled
   :value: 1


.. py:attribute:: Undefined
   :value: 0






.. vale on